✨ [v.1.0.1] resolve page transition issues, style refinement and code cleanup to <Layout />, <CodeSnippet />, and <TableOfContent />
🐛 add corresponding CSS to enable proper lenis scroll effect

✨ add custom 404 page

🐛 remove <Layout /> from _app.tsx

- Apparently, having <Layout /> directly here caused page animation issues.

💫 adjust animation delay of <Nav />

✏️ update error message of <Writings />

🐛 put global.scss after lenis.scss

🐛 add proper padding to the first <h3 /> under .articleBody-section so scrolling to it won't get cut off

🐛 refine position and transform-origin of .layout-background

🐛 set text align to left to ..tableOfContentText-text

🐛 use scrollIntoView method to scroll to h3 through clicking .tableOfContent-item.

- This issue is caused by scroll-behavior is set to auto.

✨ add custom 404 page

🐛 import <Layout /> to pages/index.tsx, resume.tsx, and [slug].tsx

🐛 update animations on <Layout /> by utilizing router.events

🐛 remove unnecessary router dep on <TableOfContent />

🐛 add key to children under <Layout />

🐛 compute headings when isMobile has a boolean value

🐛 update background animation and add mode and initial props to <AnimatePresence />

🐛 combine shouldDisplayContent && isMobile !== undefined to prevent error, and remove initial={false}

🐛 show content when isMobile has a boolean value

🐛 add some spacing to %section-wrapper to prevent content getting cut off

🐛 fix typo and add font-family inherit to <button />

🐛 remove unnecessary isMobile dep on <TableOfContent />

🐛 force font-style to <pre /> and <code />

🐛 scroll to element when there's hash in the url

🐛 fix code styling

--- a/src/styles/components/_codeSnippet.scss
+++ b/src/styles/components/_codeSnippet.scss
@@ -14,6 +14,10 @@
     width: 100%;
     @include mobile-view {
       padding-top: 40px !important;
+      font-size: 1em !important;
+    }
+    @include desktop-view {
+      font-size: 12px !important;
     }
   }
 
@@ -21,22 +25,31 @@
     @include mobile-view {
       padding-right: 30px !important;
       float: left;
-      font-size: 10px !important;
+      font-size: 0.4em !important;
     }
     @include desktop-view {
       font-size: 12px !important;
     }
   }
 
+  span {
+    line-height: 1.2em;
+    @include desktop-view {
+      line-height: 1.6em;
+    }
+  }
+
   &--inline {
     display: inline-block;
-    padding: 3px 7px;
+    margin: 0 1px;
+    padding: 1px 3px;
     border-radius: 3px;
     background-color: rgba($code-background, $opacity-50);
     color: $white;
     font-family: $code-font-family;
-    font-size: 0.8em;
+    font-size: 0.9em;
     line-height: 1.2em;
+    vertical-align: baseline;
   }
 
   &-button {
