--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -18,6 +18,8 @@
     right: 0;
     bottom: 0;
     left: 0;
+    margin: auto;
+    transform-origin: center;
     background-color: $color-background;
 
     @include desktop-view {
